front-end finished

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	background: linear-gradient(-45deg, #8e4a9a, #8f94fb, #8d24d3, #4e54c8, #13a599, #199c5c);
+	/* background: linear-gradient(-45deg, #1b0017, #03052b, #044259, #044259, #03052b, #1b0017); */
+
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes gradient {
+	0% {
+	background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+} 
+
+
+.hoverable {
+	cursor: pointer; /* Cambia el cursor a la forma de una mano */
+	transition: background-color 0.3s ease; /* Agrega una transición suave */
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .hoverable:hover {
+	color: #444444; /* Cambia el color de fondo cuando se pasa el ratón por encima */
   }
-  to {
-    transform: rotate(360deg);
+
+  .hoverable-data {
+	cursor: pointer; /* Cambia el cursor a la forma de una mano */
+	transition: background-color 0.3s ease; /* Agrega una transición suave */
   }
-}
+  
+  .hoverable-data:hover {
+	color: white; /* Cambia el color de fondo cuando se pasa el ratón por encima */
+  }
